// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`separateByNotEmpty '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 0,
}
`;

exports[`separateByNotEmpty 'this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
]
`;

exports[`separateByNotEmpty 'this,this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
  "this",
]
`;

exports[`separateByNotEmpty 'this,this,this' conditional success tests AST matches snapshot 1`] = `
[
  "this",
  "this",
  "this",
]
`;

exports[`separateByNotEmpty 'this, this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 5,
}
`;

exports[`separateByNotEmpty 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 0,
}
`;
